# lemmata

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: 404.html  CNAME  index.html
examples/: README.md  svevo_la_coscienza_di_zeno.txt  svevo_senilita.txt  svevo_una_vita.txt
prompts/: P001.md  P002.md  P003.md  P004.md  P005.md  P006.md  P007.md  P008.md  P009.md  P010.md  P011.md  P012.md  P013.md  P014.md  P015.md  P016.md  P017.md  P018.md  P019.md  P020.md  P021.md  P022.md  P023.md  P024.md  P025.md  P026.md  P027.md  P028.md  P029.md  P030.md  P031.md  P032.md  P033.md  P034.md  P035.md  P036.md  P037.md  P038.md  P039.md  P040.md  (+3 more)
src/lemmata/: __init__.py  app.py  config.py  file_io.py  modelling.py  preprocessing.py  visualisation.py
tests/: conftest.py  test_config.py  test_file_io.py  test_modelling.py  test_preprocessing.py  test_safeguards.py  test_smoke.py  test_topic_labels.py  test_visualisation.py
