[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lemmata"
version = "0.1.0"
description = "A multilingual LDA topic modeling platform for humanities researchers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Oğuz Koran", email = "oguz.koran@ankara.edu.tr"},
    {name = "Hakan Cangır", email = "hcangir@ankara.edu.tr"},
    {name = "Barış Yücesan", email = "byucesan@ankara.edu.tr"},
]
keywords = [
    "topic-modeling",
    "lda",
    "digital-humanities",
    "multilingual-nlp",
    "computational-literary-studies",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "streamlit>=1.30.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "odfpy>=1.4.1",
    "altair>=5.0.0",
    "pyLDAvis>=3.4.0",
    "gensim>=4.3.0",
    "wordcloud>=1.9.0",
    "pdfplumber>=0.10.0",
    "matplotlib>=3.7.0",
    "chardet>=5.0.0",
    "python-docx>=1.0.0",
    "ebooklib>=0.18",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require spaCy model downloads (deselect with '-m \"not slow\"')",
]

[project.urls]
Homepage = "https://lemmata.app"
Repository = "https://github.com/oguzkoran-max/lemmata"
Documentation = "https://github.com/oguzkoran-max/lemmata#readme"
"Bug Tracker" = "https://github.com/oguzkoran-max/lemmata/issues"
